--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,12 @@
-<h1>Hello World!!</h1>
+{% extends "base.html" %}
+{% block title %}Index{% endblock %}
+
+{% block head %}
+    {{ super() }}
+    <style>
+    </style>
+{% endblock%}
+
+{% block body %}
+<h1>Hello, World!</h1>
+{% endblock %}
